Fixed the alignment of the gallery labels

--- a/styleguide/source/assets/scss/03-organisms/_vc-horizontal-gallery.scss
+++ b/styleguide/source/assets/scss/03-organisms/_vc-horizontal-gallery.scss
@@ -69,6 +69,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  padding-inline: 1rem;
 }
 
 .vc-horizontal-gallery__controls-label {
